--- a/index1.html
+++ b/index1.html
@@ -28,7 +28,7 @@
                 <img src="./homeimg.png">
             </div>
         </div><br><br><br>
-        <marquee style="background-color: rgb(163, 163, 163);color:rgb(255, 4, 4);font-size:150%">Hurry Up! Some Interesting Courses And Mock Tests </marquee>
+        <marquee style="background-color: rgba(163, 163, 163, 0.698);color:rgb(248, 244, 244);font-size:150%;font-weight:bold">Hurry Up! Some Interesting Courses And Mock Tests </marquee>
         <br><br><img style="margin-left: 6%;margin-right: 6%;" src="https://www.daad.in/files/2022/06/iStock-507009337_864x486px.jpg"><br>
         <h2 class="blink" style=" font-family:Verdana, Geneva, Tahoma, sans-serif;margin-left:6%;margin-right:6%">Explore our dynamic web platform offering top-tier training, coaching, and motivational videos designed to propel your career to new heights. Our curated content empowers individuals with essential skills, insightful guidance, and unwavering motivation. Unlock your full potential and pave the way to a successful career journey with our enriching resources. Start your transformative experience today!</h2><br><br><br><br><br><br><br><br>
         <div class="footer">
