--- a/training.html
+++ b/training.html
@@ -196,7 +196,7 @@
             <center><form><button formaction="./pythonprgramming.html" formtarget="_blank">Select</button></form></center>
         </div>
         <div class="cplusplus">
-            <img src="https://img-b.udemycdn.com/course/480x270/5806946_7fdc.jpg">
+            <img src="https://eccommonstorage.blob.core.windows.net/codered/uploads/06ff5852-8877-4504-a8b2-a61f884ad8cd.webp">
             <h2>  C++ Proramming Language </h2>
             <p>Master C++ for high-performance applications, game development, system programming, and extensive industry adoption and support.</p>
             <span class="fa fa-star checked" style="padding-left: 20px;"></span>
